mobile id can now be passed from command line

--- a/project/node/CMakeLists.txt
+++ b/project/node/CMakeLists.txt
@@ -9,6 +9,7 @@ if (MOBILE_NODE)
 	set(DTC OVERLAY_FILE mobile_overlay.overlay)
 	set(CONF_FILE prj_mobile.conf segger_rtt_console.conf bt.conf)
 	add_definitions(-DMOBILE_NODE=1)
+	add_definitions(-DM_ID=1)
 else()
 	set(CONF_FILE prj_static.conf segger_rtt_console.conf bt.conf)
 endif()
