--- a/project/node/CMakeLists.txt
+++ b/project/node/CMakeLists.txt
@@ -12,6 +12,7 @@ if (MOBILE_NODE)
 	add_definitions(-DM_ID=1)
 else()
 	set(CONF_FILE prj_static.conf segger_rtt_console.conf bt.conf)
+	add_definitions(-DM_ID=5)
 endif()
 
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
