Step and direction functionality working

--- a/project/node/prj_mobile.conf
+++ b/project/node/prj_mobile.conf
@@ -6,6 +6,8 @@ CONFIG_GPIO=y
 CONFIG_I2C=y
 CONFIG_SENSOR=y
 CONFIG_LIS2DH=y
+CONFIG_MPU9250=y
+CONFIG_MPU9250_MAGN_EN=y
 # Enable power managment
 CONFIG_PM=y
 CONFIG_PM_DEVICE=y
