--- a/project/node/prj_static.conf
+++ b/project/node/prj_static.conf
@@ -14,13 +14,15 @@ CONFIG_PM_DEVICE_RUNTIME=y
 CONFIG_BT_DEVICE_NAME="Some Static Node"
 
 # Enable USB
-CONFIG_USB_DEVICE_STACK=y
-CONFIG_USB_DEVICE_PRODUCT="USB Console Tute"
+#CONFIG_USB_DEVICE_STACK=y
+#CONFIG_USB_DEVICE_PRODUCT="USB Console Tute"
 
 CONFIG_SERIAL=y
-CONFIG_CONSOLE=y
-CONFIG_UART_CONSOLE=y
-CONFIG_UART_LINE_CTRL=y
+#CONFIG_CONSOLE=y
+#CONFIG_UART_CONSOLE=y
+#CONFIG_UART_LINE_CTRL=y
+
+
 CONFIG_USB_DEVICE_PRODUCT="Particle Argon - Zephyr"
 CONFIG_USB_DEVICE_MANUFACTURER="Wilfred MK"
 CONFIG_USB_DEVICE_VID=0xC553
